--- a/Front-end/src/Components/ChatBot/ChatBotWidget.css
+++ b/Front-end/src/Components/ChatBot/ChatBotWidget.css
@@ -2,17 +2,24 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
-  width: 320px;
+  width: 30rem;
   border: 1px solid #ccc;
   border-radius: 8px;
   overflow: hidden;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   transition: height 0.3s;
+  height: 30rem;
 }
 
-.chatbot-widget.expanded {
-  height: 400px;
+.chatbot-widget.minimized {
+  height: 60px;
+  transition: height 0.5s ease-in-out;
+  overflow: hidden;
+}
+
+.chatbot-widget.minimized .chatbot-widget__messages {
+  display: none;
 }
 
 .chatbot-widget__header {
@@ -39,11 +46,28 @@
 }
 
 .chatbot-widget__input {
+  margin-top: 4rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 12px;
   background-color: #f5f5f5;
+}
+
+.message-user {
+  height: 3rem;
+  border-radius: 5px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.message-bot {
+  background-color: #eee;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .chatbot-widget__input input[type="text"] {
@@ -64,4 +88,11 @@
 
 .chatbot-widget__input button:hover {
   background-color: #0056b3;
+}
+
+.img-chatbot {
+  width: 2rem;
+  height: 2rem;
+  margin-right: 10px;
+  margin-top: 10px;
 }
