--- a/Front-end/src/Styles/Profile.css
+++ b/Front-end/src/Styles/Profile.css
@@ -18,3 +18,58 @@
     margin: 0px 20px;
     cursor: pointer;
 }
+
+.profile-stats-card {
+    margin: 10px 20px;
+    background-color: #1c1c1c;
+    color: white;
+    padding: 20px;
+    margin-top: 50px;
+    border-radius: 20px;
+}
+
+.profile-stats-title {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.profile-teams-card {
+    margin: 10px 20px;
+    padding: 20px;
+    margin-top: 50px;
+    display: flex;
+    width: 90%;
+    align-items: stretch;
+}
+
+.profile-teams-title {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.profile-compare-title {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.profile-team-div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    padding-inline: 100px;
+}
+
+.profile-leave-btn {
+    padding: 10px 20px;
+    background-color: #1c1c1c;
+    color: white;
+    cursor: pointer;
+    border-radius: 10px;
+}
